--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@ body {
 
 /* Containers */
 
+.container-wrapper{
+
+}
+
+.container-wrapper--red{
+    background-color: #f05f40;
+    color: white;
+}
+
 .alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
@@ -46,6 +55,22 @@ body {
 
 .features-container {}
 
+/* Page Headers */
+
+.page-header{
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2{
+    margin-top: 0;
+}
+
+.quotes .page-header{
+    margin-bottom: 25px;
+}
+
 /* Block dividers */
 
 .block-divider {
@@ -59,8 +84,20 @@ body {
     background-color: #f05f40;
 }
 
+.block-divider--white{
+    background-color: white;
+    margin-bottom: 30px;
+}
+
 .block-divider--short {
     width: 35px;
+}
+
+/* Content containers */
+
+.content-container{
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 /* Navbar */
@@ -138,4 +175,25 @@ body {
     background-color: #9c331c;
     border-color: #9c331c;
     color: white;
+}
+
+.feature{
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i{
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn{
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
